--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#40627B</color>
+    <color name="dark_gray">#1B1C1D</color>
+    <color name="gray">#45474A</color>
+    <color name="light_gray">#FEFCFD</color>
+    <color name="dark_red">#660000</color>
 </resources>
